<resources>
    <string name="app_name">GPS Route Guide</string>
    <string name="admob_interstitial_id">ca-app-pub-9956372986642703/9880877871</string>
    <string name="simple_banner_id">ca-app-pub-9956372986642703/1776164688</string>
    <string name="route_finder">Route Finder</string>
    <string name="my_location">My Location</string>
    <string name="your_fav_place">Your Favourite Places</string>
    <string name="view_frnd_location">Friend Location</string>
    <string name="discover">Discover</string>
    <string name="share_my_location">Share Location</string>
    <string name="explore">Explore</string>
    <string name="feedback">Feedback </string>
    <string name="feedbackhint">what is on your mind? </string>
    <string name="subject">Subject </string>
    <string name="feedback_dialog_hint">Your feedback means a lot to keep us going! \n Thank you!</string>
    <string name="feedback_dialog">Feedback Gps Route Finder !</string>
    <string name="featuredapps">Promoted Apps</string>
    <string name="gpstracker">GPS Tracker</string>
    <string name="gps2">Navigation</string>
    <string name="record">Record</string>
    <string name="trythisforfree">Try this for FREE</string>
    <string name="speedometer">Speedometer</string>
    <string name="selectmeter">Select Meter</string>
    <string name="digitalmeter">Digital Meter</string>
    <string name="analogmeter">Analog Meter</string>
    <string name="selectunitoption">Select Unit option</string>
    <string name="kilometerperhr_kmh">Kilo Meter Per Hr (km/h)</string>
    <string name="milesperhr_mph">Miles Per Hr (mph)</string>
    <string name="knot_knot">Knot (knot)</string>
    <string name="savesetting">Save setting</string>
    <string name="setting">Settings</string>
    <string name="download">Download</string>
    <string name="app1">Offline GPS route and Navigation</string>
    <string name="app2">GPS Route Finder Maps</string>
    <string name="app3">Mobile Location Tracker</string>
    <string name="app4">Video Downloader For Facebook</string>
    <string name="app5">Girl Voice Changer</string>
    <string name="app6">Smart Manager-Battery Saver</string>
    <string name="app7">Super VPN Proxy-VPN Free</string>
    <string name="app8">Always on Display-AMOLED</string>
    <string name="alert">Alert!</string>
    <string name="tracker">This feature will download from Playstore</string>
    <string name="tab_Navigation">Navigation</string>
    <string name="tab_Nearby">Nearby</string>
    <string name="eathmap">Earth Map</string>
    <string name="drivingroute">Driving Route</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="hospital">Hospital</string>
    <string name="hotel">Hotels</string>
    <string name="mosques">Mosques</string>
    <string name="airport">Airports</string>
    <string name="banks">Banks</string>
    <string name="atms">ATMs</string>
    <string name="postoffice">Post Office</string>
    <string name="schools">Schools</string>
    <string name="universty">University</string>
    <string name="firestation">Fire Station</string>
    <string name="policestation">Police Station</string>
    <string name="parks">Parks</string>
    <string name="bakery">Bakery</string>
    <string name="cafe">Cafe</string>
    <string name="servicestation">Service Station</string>
    <string name="church">Church</string>
    <string name="clothingstore">Clothing Store</string>
    <string name="dentist">Dentist</string>
    <string name="doctor">Doctor</string>
    <string name="gasstation">Gas Station</string>
    <string name="beautysalon">Beauty Salon</string>
    <string name="jewelrystore">jewelry Store</string>
    <string name="petstore">Pet Store</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="shoestore">Shoe Store</string>
    <string name="shoppingmall">Shopping Mall</string>
    <string name="subwaystation">Subway Station</string>
    <string name="zoo">Zoo</string>
    <string name="favourite_places">Favourite Places</string>
    <string name="view_frnd_loc">View Friend Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Delete</string>
    <string name="confirm_delte">Are you sure to delete favourite place ?</string>
    <string name="dselectcontact">Select Contact</string>
    <string name="selectfromcontact">Select from Contact</string>
    <string name="selectfromCallLog">Select from Call Log</string>
    <string name="selectfromMessages">Select from Messages</string>
    <string name="selectmanually">Select Manually</string>
    <string name="entermanually">Enter Contact</string>
    <string name="send">Send</string>
    <string name="phonenumberhint">Phone number</string>
    <string name="clearall">Clear All</string>
    <string name="locationreceivedon">Location Received on</string>
    <string name="viewlocation">View Location</string>
    <string name="routetofriend">Route to Friend</string>
    <string name="share">Share</string>
    <string name="addtofavourite">Add to Favourite</string>
    <string name="poweredby">Powered by:</string>
    <string name="prmestudioapps">Prime Studio Apps</string>
    <string name="improve_ram">To improve your device performance, end the apps below.</string>
    <string name="ramcleaner">Ram Booster</string>
    <string name="ramusage">Ram Usage</string>
    <string name="ramusagetips">Show notification when ram usage exceeds limit 70%</string>
    <string name="weeklynotificationtips">Show notification on every Friday and Saturday.</string>
    <string name="weeklynotification">Weekly Notifications</string>
    <string name="ramnotification">Application consume power</string>
    <string name="ramnotificationtip">Please close app to increase battery life!!!</string>
    <string name="backgroundapps">Background Applications:</string>
    <string name="ramoptimized">Ram Optimized Successfully!</string>
    <string name="free">free</string>
    <string name="systemandapps">System and Apps:</string>
    <string name="total">Total:</string>
    <string name="excludedreservedmemory">(excluded reserved memory)</string>
    <string name="ok">OK</string>
    <string name="endall">END ALL</string>
    <string name="ram_cleaner">RAM Cleaner</string>
    <string name="privacy_policy_title">Privacy Policy</string>
</resources>