<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dselectcontact"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/selectfromcontact"
    android:textAllCaps="false"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/add_from_contacts"
    android:background="@drawable/btn_background"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectfromCallLog"
        android:textAllCaps="false"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/add_from_callLog"
        android:background="@drawable/btn_background"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectfromMessages"
        android:textAllCaps="false"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/add_from_messages"
        android:background="@drawable/btn_background"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectmanually"
        android:textAllCaps="false"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/manually_add"
        android:background="@drawable/btn_background"
        />
</LinearLayout>
