<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_container">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notifications"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="5"
                    android:layout_marginTop="10dp"
                    android:padding="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ramusage"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ramusagetips"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/swRamNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:theme="@style/BrandedSwitch.control"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_below="@+id/swMessages"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="5"
                    android:layout_marginTop="10dp"
                    android:padding="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weeklynotification"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weeklynotificationtips"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/swWeeklyNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:theme="@style/BrandedSwitch.control"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_below="@+id/swMessages"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_title"
                android:textSize="18sp"
                android:id="@+id/mPrivacyPolicy"
                android:layout_marginTop="10dp"
                android:padding="7dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ad_container"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/background"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

</RelativeLayout>